[workspace]
resolver = "2"
members = [
    "predawn",
    "predawn-core",
    "predawn-macro",
    "predawn-schema",
    "predawn-sea-orm",
    "examples/*",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/predawn"
repository = "https://github.com/ZihanType/predawn"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"

[workspace.dependencies]
# self
predawn = { version = "0.7.0", path = "./predawn", default-features = false }
predawn-core = { version = "0.7.0", path = "./predawn-core", default-features = false }
predawn-macro = { version = "0.7.0", path = "./predawn-macro", default-features = false }
predawn-schema = { version = "0.7.0", path = "./predawn-schema", default-features = false }
predawn-sea-orm = { version = "0.7.0", path = "./predawn-sea-orm", default-features = false }

# dependencies
async-trait = { version = "0.1", default-features = false }
from-attr = { version = "0.1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
quote-use = { version = "0.8", default-features = false }
syn = { version = "2", default-features = false }
http = { version = "1", default-features = false }
hyper = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
matchit = { version = "0.8", default-features = false }
hyper-util = { version = "0.1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
mime = { version = "0.3", default-features = false }
rudi = { version = "0.8", default-features = false }
paste = { version = "1", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }
serde_html_form = { version = "0.2", default-features = false }
openapiv3 = { version = "2", default-features = false }
schemars = { version = "0.8", default-features = false }
indexmap = { version = "2", default-features = false }
macro-v = { version = "0.1", default-features = false }
percent-encoding = { version = "2", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.5", default-features = false }
config = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false }
multer = { version = "3", default-features = false }
sea-orm = { version = "1", default-features = false }
scc = { version = "2", default-features = false }
url = { version = "2", default-features = false }
headers = { version = "0.4", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tokio-tungstenite = { version = "0.23", default-features = false }
memchr = { version = "2", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
async-stream = { version = "0.3", default-features = false }
form_urlencoded = { version = "1", default-features = false }
