[package]
name = "predawn-core"
description = "Core types and traits for predawn"
keywords = ["http", "web", "framework", "async"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
predawn-schema = { workspace = true }

bytes = { workspace = true }
futures-util = { workspace = true, features = ["alloc"] }
hyper = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
thiserror = { workspace = true }
sync_wrapper = { workspace = true }
mime = { workspace = true }
openapiv3 = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
