[package]
name = "predawn-core"
description = "Core types and traits for predawn"
keywords = ["http", "web", "framework", "async"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
predawn-schema = { workspace = true }

bytes = { workspace = true }
futures-core = { workspace = true, features = ["alloc"] }
futures-util = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
mime = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
snafu = { workspace = true, features = ["rust_1_65", "std"] }
error2 = { workspace = true, features = ["snafu"] }
