[package]
name = "predawn-macro"
description = "Macros for predawn"
keywords = ["http", "web", "framework", "async"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
from-attr = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
quote-use = { workspace = true }
syn = { workspace = true, features = [
    "extra-traits",
    "parsing",
    "proc-macro",
    "printing",
    "full",
] }
http = { workspace = true, features = ["std"] }

[dev-dependencies]
# cannot contain `workspace = true` to avoid circular references.
predawn = { path = "../predawn", default-features = false, features = [
    "auto-register",
] }

http = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["auto-register"]
auto-register = []
