[package]
name = "predawn-macro"
description = "Macros for predawn"
keywords = ["http", "web", "framework", "async"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
predawn-macro-core = { workspace = true }

from-attr = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
quote-use = { workspace = true }
syn = { workspace = true, features = ["full"] }
http = { workspace = true, features = ["std"] }

[dev-dependencies]
# cannot contain `workspace = true` to avoid circular dependencies.
predawn = { path = "../predawn", default-features = false, features = [
    "macro",
    "auto-register",
] }
# just close errors when run `cargo test --doc` in root workspace
predawn-schema = { path = "../predawn-schema", default-features = false }

serde = { workspace = true }

[features]
default = ["auto-register"]
auto-register = []
