[package]
name = "predawn-schema-macro"
description = "Macros for predawn-schema"
keywords = ["predawn", "schema", "macro"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
predawn-macro-core = { workspace = true }

from-attr = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
quote-use = { workspace = true }
syn = { workspace = true }

[features]
default = ["__used_in_predawn"]
__used_in_predawn = ["predawn-macro-core/__used_in_predawn"]
__used_in_predawn_schema = ["predawn-macro-core/__used_in_predawn_schema"]
