[package]
name = "predawn-schema"
description = "OpenAPI schema for predawn"
keywords = ["http", "web", "framework", "openapi", "schema"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
predawn-schema-macro = { workspace = true, optional = true, features = [
    "schema",
] }

openapiv3 = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
macro-v = { workspace = true }
paste = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
default = ["macro"]
macro = ["dep:predawn-schema-macro"]
raw_value = ["serde_json/raw_value"]
schemars = ["dep:schemars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
