[package]
name = "predawn"
description = "Predawn is a Rust web framework like Spring Boot."
keywords = ["http", "web", "framework", "async"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
predawn-core = { workspace = true }
predawn-macro = { workspace = true, optional = true }
predawn-schema = { workspace = true }

hyper = { workspace = true, features = ["server", "http1", "http2"] }
thiserror = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
futures-util = { workspace = true, features = ["alloc"] }
matchit = { workspace = true }
tokio = { workspace = true, features = ["macros", "signal"] }
hyper-util = { workspace = true, features = [
    "tokio",
    "server",
    "http1",
    "http2",
] }
tracing = { workspace = true }
rudi = { workspace = true, features = ["rudi-macro", "auto-register"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
mime = { workspace = true }
serde_html_form = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
percent-encoding = { workspace = true }
config = { workspace = true, features = ["toml"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt", "ansi"] }
reqwest = { workspace = true }
http-body-util = { workspace = true }
multer = { workspace = true }
headers = { workspace = true }

# Optional dependencies
tower = { workspace = true, optional = true }

[features]
default = ["macro", "auto-register"]
auto-register = ["predawn-macro?/auto-register"]
macro = ["dep:predawn-macro"]
tower-compat = ["dep:tower"]
schemars = ["predawn-schema/schemars"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
