[package]
name = "sea-orm-mysql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
predawn = { workspace = true, features = ["auto-register"] }
predawn-sea-orm = { workspace = true, features = [
    "mysql",
    "runtime-tokio-rustls",
] }

tokio = { workspace = true, features = ["rt-multi-thread"] }
rudi = { workspace = true, features = [
    "rudi-macro",
    "auto-register",
    "tracing",
] }
sea-orm = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
